# qrlink-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/: api-usage.md
migrations/: 001_init.sql
public/: app.js  index.html  styles.css
src/: config.rs  domain.rs  error.rs  http.rs  lib.rs  main.rs  qr.rs  rate_limit.rs  repository.rs  service.rs
src/domain/: link.rs  short_code.rs  ttl.rs
src/http/: handlers.rs  router.rs
src/qr/: generator.rs
src/repository/: link_repository.rs
src/service/: link_service.rs  qr_service.rs
tests/: admin_protection_test.rs
