[package]
name = "qrlink"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
url = { version = "2", features = ["serde"] }

# QR Code
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.46"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
